--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,5 @@
+@import 'vendor/bootstrap/variables';
+
 // colors
 $nav_bg:            #023d88;
 $nav_active:        #3564a0;
@@ -10,7 +12,7 @@ $login_bg:          #f5f5f5;    // table bg
 
 
 $collapse_header_closed:#218fce;
-$success2:          #63d6a5; 
+$active_input_border:#63d6a5; 
 $info2:             #d4f1ed;
 $collapse_open_menu:#cbe9f0;
 
@@ -23,13 +25,14 @@ $text6:             #00172c;
 
 $border_tab:        #a0a0a0;
 $border2:           #e6eaf0;
-$border3:           #e0e5ec;
+$border3:           #e0e5ec;  // disable_prev/next_pagination
 $border4:           #90b8f9;
 $disable_input_bg:  #eef7fa;
+$table_border:      #dfeef5;
 
 // graph
 $type1:             #1ca2ee;
-$type2:             $primary;
+// - $type2:             $primary;
 $type3:             #1b78ad;
 $type4:             #4caf50;
 $bar_incomplete:    #11618f;
@@ -39,4 +42,4 @@ $bar_incomplete:    #11618f;
 // // // // //
 
 $text2:             #113960;
-$body-bg:           #eaf5f9;    //toggle_false_bg, disable_input_bg2, small_table_bg
+$body-bg:           #eaf5f9;    //toggle_false_bg, disable_input_bg2, small_table_bg  //active pagination
