report full width card html markup

--- a/src/pug/includes/base.pug
+++ b/src/pug/includes/base.pug
@@ -32,7 +32,7 @@ html(lang="en")
                             li.nav-item
                                 a.nav-link(href="#") Reports
                             li.nav-item.nav-cta
-                                a.nav-link(href="#") Add Patient
+                                a.nav-link.btn.btn-info.border.border-white.text-white(href="#") Add Patient
                         form.form-inline.my-2.my-lg-0
                             input.form-control.mr-sm-2(type="search", placeholder="Type here...", aria-label="Search")
                             button.btn.btn-outline-success.my-2.my-sm-0(type="submit")
