--- a/src/pug/includes/base.pug
+++ b/src/pug/includes/base.pug
@@ -10,13 +10,14 @@ html(lang="en")
         title Benetech | #{title}
 
         link(rel="icon", size="128x128", type="image/png" href="images/favicon.png")
+        link(href='https://fonts.googleapis.com/css?family=Open+Sans&display=swap', rel='stylesheet')
 
         block head_css
             link(rel="stylesheet", href="css/styles.min.css")
     body
         block header
-            header
-                nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
+            header#header
+                nav.navbar.navbar-expand-lg.navbar-dark
                     a.navbar-brand(href="#")
                         img(src="images/logo.png")
                     button.navbar-toggler(type="button", data-toggle="collapse", data-target="#main-menu-top", aria-controls="main-menu-top", aria-label="Toggle navigation")
@@ -33,9 +34,9 @@ html(lang="en")
                                 a.nav-link(href="#") Reports
                             li.nav-item.nav-cta
                                 a.nav-link.btn.btn-info.border.border-white.text-white(href="#") Add Patient
-                        form.form-inline.my-2.my-lg-0
+                        form.form-inline
                             input.form-control.mr-sm-2(type="search", placeholder="Type here...", aria-label="Search")
-                            button.btn.btn-outline-success.my-2.my-sm-0(type="submit")
+                            button.btn.btn-primary(type="submit")
                                 img(src="images/search.png")
                         .top-nav-logout
                             a(href="#")
