--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,3 +9,4 @@ $navbar-mx-height: 64px;
 $logo-height: 22px;
 $logout-img-height: 32px;
 $search-img-height: 14px;
+$navbar-box-shadow: 0 4px 4px rgba(120, 120, 120, 0.25);
