--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,7 +2,9 @@
 @import "variables";
 @import "mixins";
 
-@import "default";
+@import "reboot";
 @import "navbar";
+@import "main-body";
+@import "search";
 @import "table";
 @import "reports";
