--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -39,15 +39,15 @@ $bar_incomplete:    #11618f;
 
 
 
-// // // // //
-
-$text2:             #113960;
-$body-bg:           #eaf5f9;    //toggle_false_bg, disable_input_bg2, small_table_bg  //active pagination
-
-
 // currently using in project
+$bg-color-2:             #eaf5f9;    //toggle_false_bg, disable_input_bg2, small_table_bg  //active pagination
 
-$nav-bg:            #023d88;
-$nav-item-active:   #3564a0;
-$nav-item-border-color: #7697bf;
+$nav-bg:                 #023d88;
+$nav-item-active:        #3564a0;
+$nav-item-border-color:  #7697bf;
+
 $text-color: $body-color;
+$text-color-2:           #115760;
+$text-color-3:           #4f7579;
+
+$pagination-border:      #f4f8fb;
