--- a/src/pug/search-result.pug
+++ b/src/pug/search-result.pug
@@ -25,7 +25,7 @@ block content
                             .col-md-3
                                 .form-group
                                     label Birth Date
-                                    input.form-control(type="date", name="birth-date")
+                                    input.form-control.jqui-datepicker(type="text", name="birth-date", autocomplete="off")
                     .col-md-6
                         .row
                             .col-md-3
@@ -82,8 +82,8 @@ block content
                         a.btn.btn-info.bt-btn.mr-3(href="#") New Search
                         button.btn.btn-warning.bt-btn(type="submit") Search
 
-    #search-content.px-3
-        .mt-5
+    #search-content.px-3.mb-5
+        .mt-5.heading
             h2.d-inline-block Search Patient:
             span 333 333 results
 
@@ -116,23 +116,26 @@ block content
                             td 05050500
                             td WC_3333
                             td 19819389-MO-1
-            nav(aria-label='Pagination')
-                ul.pagination
-                    li.page-item.disabled
-                        a.page-link(href='#')
-                            img(src="images/caret-left.png")
-                    li.page-item
-                        a.page-link(href='#') 1
-                    li.page-item.active
-                        span.page-link 2
-                    li.page-item
-                        a.page-link(href='#') 3
-                    li.page-item
-                        span.page-link ...
-                    li.page-item
-                        a.page-link(href='#') 23
-                    li.page-item
-                        a.page-link(href='#')
-                            img(src="images/caret-right.png")
+                    tr
+                        td(colspan="11")
+                            .d-flex.justify-content-end#search-pagination
+                                nav(aria-label='Pagination')
+                                    ul.pagination
+                                        li.page-item.disabled
+                                            a.page-link(href='#')
+                                                span.sr-only prev
+                                        li.page-item.active
+                                            span.page-link 1
+                                        li.page-item
+                                            a.page-link(href='#') 2
+                                        li.page-item
+                                            a.page-link(href='#') 3
+                                        li.page-item
+                                            span.page-link ...
+                                        li.page-item
+                                            a.page-link(href='#') 23
+                                        li.page-item
+                                            a.page-link(href='#')
+                                                span.sr-only next
 
 
