--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -51,3 +51,5 @@ $text-color-2:           #115760;
 $text-color-3:           #4f7579;
 
 $pagination-border:      #f4f8fb;
+$login-input-border:     #4fcfdf;
+$login-link-color:       #26c6da; // $text4;
