added dasbhboard.hpug page

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -15,7 +15,7 @@ block main_body
                 .col-md-6#login-bg
                 .col-md-6
                     #login-form.d-flex.justify-content-center.align-items-center
-                        form(action="dashboard.html", method="post")
+                        form(action="dashboard.html")
                             h1 Log in
                             .form-group
                                 label Username
