--- a/src/scss/_search.scss
+++ b/src/scss/_search.scss
@@ -72,6 +72,13 @@
             color: $text-color-2;
             @extend .open-sans;
             thead {
+                &.thead-primary {
+                    th {
+                        color: $white;
+                        background-color: $primary;
+                        border: none;
+                    }
+                }
                 &>tr{
                     &>th {
                         border-bottom: 0;
@@ -141,6 +148,13 @@
                     }
                 }
             }
+            .thead-primary {
+    th {
+        color: $white;
+        background-color: $primary;
+        border: none;
+    }
+}
         }
     }
 }
