--- a/src/pug/includes/base.pug
+++ b/src/pug/includes/base.pug
@@ -92,4 +92,5 @@ html(lang="en")
         block bottom_js
             script(src="js/popper.min.js")
             script(src="js/bootstrap.min.js")
+            script(src="js/jquery.mask.min.js")
             script(src="js/scripts.js")
