--- a/src/scss/_reboot.scss
+++ b/src/scss/_reboot.scss
@@ -65,3 +65,209 @@ img {
     @extend .rounded-TL;
     @extend .rounded-BL;
 }
+
+.form-group {
+    &.cross-show {
+        position: relative;
+        span {
+            $sz: 14px;
+            background-image: url('../images/cross-green.png');
+            background-size: $sz $sz;
+            width: $sz;
+            height: $sz;
+            position: absolute;
+            right: 10px;
+            bottom: 12px;
+        }
+    }
+    .add-icon-right {
+        position: relative;
+        $sz: 40px;
+        input {
+            padding-right: $sz + 5px !important;
+        }
+        .add-icon {
+            position: absolute;
+            right: 0;
+            bottom: 0;
+            width: $sz;
+            height: 100%;
+            background-color: $primary;
+            cursor: pointer;
+            @extend .d-flex;
+            @extend .justify-content-center;
+            @extend .align-items-center;
+            @extend .rounded;
+            img {
+                width: 17px;
+            }
+        }
+    }
+}
+
+.form-control {
+    &:disabled,
+    &[readonly] {
+        background-color: $bg-color-2;
+        border-color: transparent !important;
+    }
+}
+
+.custom-checkbox {
+    .custom-control-label{
+        padding-left: 10px;
+        padding-top: 6px;
+        cursor: pointer;
+        &:before {
+            background: url(../images/tick-mark-transparent.png) no-repeat center center;
+            background-size: 16px 12px;
+            border-color: $border-color-1;
+        }
+        
+        &:after,
+        &:before {
+            $sz: 25px;
+            width: $sz;
+            height: $sz;
+        }
+    }
+    .custom-control-input{
+        &:checked {
+            &~ .custom-control-label {
+                &:before {
+                    background-image: none !important;
+                }
+            }
+        }
+    }
+}
+
+.input-checkbox-toggle {
+    $toggle-full-width: 100%;
+    $toggle-full-height: 40px;
+    $toggle-left-width: 100px;
+    $gap: 6px;
+
+    display: inline-block;
+    position: relative;
+    width: $toggle-full-width;
+    height: $toggle-full-height;
+    background-color: $bg-color-2;
+    border-radius: $border-radius;
+    overflow: hidden;
+    border: 1px solid $text-color-3;
+    input[type="checkbox"] {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        display: block;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        cursor: pointer;
+        opacity: 0;
+        filter: alpha(opacity=0);
+        z-index: 10;
+        &:checked{
+            & + label {
+                margin-left: $toggle-left-width;
+                width: calc(#{$toggle-full-width} - #{$toggle-left-width});
+                &:before {
+                    content: var(--dataRight);
+                }
+            }
+        }
+    }
+    label {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: $toggle-left-width;
+        height: $toggle-full-height;
+        background-color: $info;
+        color: #fff;
+        font-size: 16px;
+        font-weight: bold;
+        transition: all 0.2s ease-in-out;
+        z-index: 5;
+        &:before {
+            content: var(--dataLeft);
+        }
+    }
+    &:before,
+    &:after {
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        font-size: 16px;
+        line-height: $toggle-full-height;
+        color: $body-color;
+        display: block;
+        z-index: 0;
+    }
+    &:before {
+        content: var(--dataLeft);
+        text-align-last: left;
+        padding-left: $gap;
+    }
+    &:after {
+        content: var(--dataRight);
+        text-align: right;
+        padding-right: $gap;
+    }
+}
+
+.count-box {
+    .form-control {
+        width: 60px;
+    }
+}
+
+.bt-pill-item {
+    border: 1px solid;
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    @extend .open-sans;
+    @extend .rounded;
+    @extend .d-flex;
+    &.bt-pill-positive {
+        border-color: $danger;
+        color: $danger;
+        span {
+            &:last-child {
+                background-color: $danger;
+            }
+        }
+    }
+    &.bt-pill-negative {
+        border-color: $success;
+        color: $success;
+        span {
+            &:last-child {
+                background-color: $success;
+            }
+        }
+    }
+    span {
+        flex: 0 0 50%;
+        max-width: 50%;
+        padding: 8px 7px;
+        @media (max-width: 1400px) {
+            font-size: 12px;
+        }
+        &:last-child {
+            $bor-rad: 6px;
+            color: #fff;
+            text-align: left;
+            border-top-right-radius: $bor-rad;
+            border-bottom-right-radius: $bor-rad;
+        }
+    }
+}
