--- a/src/scss/_reports.scss
+++ b/src/scss/_reports.scss
@@ -62,7 +62,8 @@
         }
         #add-reports-tab-btn {
             margin-right: 5px;
-            .nav-link{
+            &>a{
+                cursor: pointer;
                 padding: 15px;
                 @extend .rounded-T;
                 border-color: $report-border-color !important;
